tests/NormalTests/paczka1/small_fuzzy/44667052.err
Error in line 2: S517 S517 428,4
Error in line 1: UxyiKUw8II A823 99,6
Error in line 12: 4Qz S517 79,6
